k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-system-deployment
  labels:
    app: ticketing-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ticketing-system
  template:
    metadata:
      labels:
        app: ticketing-system
    spec:
      containers:
      - name: ticketing-system
        image: ticketing-system:v67 # அல்லது உங்கள் Docker Hub/Registry image name
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-system-service
spec:
  type: NodePort
  selector:
    app: ticketing-system
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-system-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ticketingsystem.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ticketing-system-service
            port:
              number: 5000
